added data and layer toggle

--- a/css/styles.css
+++ b/css/styles.css
@@ -86,9 +86,9 @@ html, body {
 
 /* end of button */
 
-.map-overlay {
+/* .map-overlay {
   position: absolute;
-  top: 30px;
+  bottom: 30px;
   right: 10px;
   background: #C2C0C4;
   margin-right: 20px;
@@ -112,4 +112,50 @@ html, body {
   width: 10px;
   height: 10px;
   margin-right: 5px;
+} */
+
+/* layer toggle area */
+/* https://docs.mapbox.com/mapbox-gl-js/example/toggle-layers/ */
+
+#menu {
+  background: #fff;
+  opacity: 0.8;
+  position: absolute;
+  z-index: 1;
+  top: 10px;
+  right: 10px;
+  border-radius: 3px;
+  width: 150px;
+  border: 1px solid rgba(0, 0, 0, 0.4);
+  font-family: 'Open Sans', sans-serif;
+}
+
+#menu a {
+  font-size: 13px;
+  color: #404040;
+  display: block;
+  margin: 0;
+  padding: 0;
+  padding: 10px;
+  text-decoration: none;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.25);
+  text-align: center;
+}
+
+#menu a:last-child {
+  border: none;
+}
+
+#menu a:hover {
+  background-color: #f8f8f8;
+  color: #404040;
+}
+
+#menu a.active {
+  background-color: #3887be;
+  color: #ffffff;
+}
+
+#menu a.active:hover {
+  background: #3074a4;
 }
