--- a/css/styles.css
+++ b/css/styles.css
@@ -33,6 +33,17 @@ html, body {
 .sidebar-top {
   flex-grow: 1;
   border-bottom: 1px solid #5e5e5e;
+  overflow: auto;
+}
+
+.scrollbar {
+margin-left: 30px;
+float: left;
+height: 300px;
+width: 65px;
+background: #fff;
+overflow-y: scroll;
+margin-bottom: 25px;
 }
 
 .sidebar-bottom {
