--- a/css/styles.css
+++ b/css/styles.css
@@ -19,7 +19,7 @@ html, body {
 }
 
 .sidebar {
-  width: 400px;
+  width: 500px;
   height: 100%;
   padding: 25px 15px;
   background-color: #313640;
@@ -99,9 +99,16 @@ margin-bottom: 25px;
 }
 
 .flyto{
-  width: 90px;
-  height: 70px;
+  width: 110px;
+  height: 60px;
   font-size: 14px;
+}
+
+.highlight{
+  font-size: 20px;
+  font-weight: 700;
+  letter-spacing: 1px;
+  color: #A8F5F2;
 }
 
 .carousel-inner{
