--- a/css/styles.css
+++ b/css/styles.css
@@ -128,6 +128,23 @@ margin-bottom: 25px;
   top: 220px;
 }
 
+/* unvisited & visited link */
+a:link, a:visited {
+  /* background-color: #ccc; */
+  color: white;
+}
+
+
+/* mouse over link */
+/* a:hover {
+  color: #ccc;
+}
+
+/* selected link */
+/* a:active {
+  color: green;
+} */
+
 
 /* .map-overlay {
   position: absolute;
